# medgemma-spatial

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BEST_PRACTICES.md  CLAUDE.MD  CRITICAL_SUCCESS_FACTORS.md  ENVIRONMENT_SETUP.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  GITHUB_NEXT_STEPS.md  GITHUB_SETUP.md  KAGGLE_SETUP.md  LOKI_QUICK_START.md  MEDGEMMA_ARCHITECTURE_V2.md  MEDGEMMA_V2_IMPLEMENTATION.md  MEDGEMMA_V2_VALIDATION.md  NEXT_STEPS.md  PROJECT_AUDIT_2026-01-29.md  PROJECT_CHECKLIST.md  PROJECT_STATUS.md  ProjectPlan.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_V2.md  README.md  SESSION_STATUS.md  SKILLS.md  SPATIAL_METRICS_QUICK_REF.md  SPATIAL_STATS_SUMMARY.md  STATUS_WEEK1_DAY1-2.md  TEST_RESULTS.md  WEEK2_DAY1_SUMMARY.md  WEEK2_DAY2_DAY3_COMPLETE.md  WEEK2_DAY2_SUMMARY.md  environment.yml  pyproject.toml  requirements.txt  requirements_full.txt  run_pipeline.sh  (+1 more)
.streamlit/: config.toml
app/: Dockerfile  HF_DEPLOYMENT_CHECKLIST.md  README.md  README_HUGGINGFACE.md  SPACE_README.md  build.sh  docker-compose.yml  requirements.txt  streamlit_app.py
data/: file_mapping.json  housekeeping_genes.csv
docs/: SKILLS.md
notebooks/: 00_MEDGEMMA_INDEX.md  01_scanpy_baseline.ipynb  01_scanpy_baseline_CORRECTED.ipynb  01_spatial_analysis.ipynb  02_cell_type_annotation.ipynb  03_cell_type_exploration.ipynb  04_medgemma_reports.ipynb  05_spatial_statistics.ipynb  05_whitepaper.ipynb  CORRECTED_NOTEBOOK_SUMMARY.md  CRITICAL_FIX_SPATIAL_ALIGNMENT.md  MEDGEMMA_CHECKLIST.md  MEDGEMMA_QUICKSTART.md  MEDGEMMA_SUMMARY.md  MEDGEMMA_WORKFLOW.txt  NEXT_STEPS.md  README.md  README_MEDGEMMA.md  README_spatial_stats.md  SPATIAL_ENHANCEMENT_GUIDE.md  create_weak_signal_sample.py  example_prompt.py  explanations.md  kaggle_submission.ipynb  kernel-metadata.json  marker_annotation.py  medgemma_report_generator.py  medgemma_self_audit.py  medgemma_v2_pipeline.py  run_baseline.py  run_baseline_fixed.py  run_celltypist.py  run_corrected.py  run_medgemma.py  run_spatial_stats.py  test_medgemma_setup.py  test_spatial_viz.py  test_visium_proper.py  train_lora.ipynb  train_lora_kernel_metadata.json  (+2 more)
outputs/: AGENT_ROBUSTNESS_SUMMARY.md  DAY1_COMPLETION_REPORT.md  DAY1_STATUS_REPORT.md  DEPLOYMENT_VALIDATION_REPORT.md  LOKI_DECISION.md  LOKI_DECISION_CHECKLIST.txt  LOKI_FINAL_STATUS.md  LOKI_TEST_SUMMARY.txt  MEDGEMMA_SUCCESS_SUMMARY.md  MONITORING_SUMMARY_2026-02-06.md  PROGRESS_REPORT_2026-02-06_071431.md  ROBUSTNESS_TEST_AGENT2_SUMMARY.md  loki_test_log.txt  (+8 more)
(+67 files in other folders)
